--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.3.0 (2018-09-07)
+    - added support for Barracuda BBATV
+    - moved secondary MX configuration from R to D
+    - added an undocumented feature
+
 1.2.0 (2018-05-25)
     - added support for email address DNS lists
     - fixed libopenarc assert crash
