--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,7 @@
     - added support for DNS lists with multiple entry types
     - improved CLI tool interface consistency
     - added support for multiple subaddress separators
+    - improved handling of required "Postmaster" mailbox
 
 1.5.0 (2020-11-30)
     - fixed crash from bad bugfix
