--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,10 @@
     - improved CLI tool interface consistency
     - added support for multiple subaddress separators
     - improved handling of required "Postmaster" mailbox
+    - fixed a "poison pill" bug, where a single consistently tempfailed message
+      (e.g. due to a particular mailbox being throttled) would cause all of
+      that domain's MXes to be marked as down. simta would then skip delivery of
+      any remaining messages in that host queue.
 
 1.5.0 (2020-11-30)
     - fixed crash from bad bugfix
