--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.4.3 (2020-02-06)
+    - fixed lack of aggression on initial delivery of messages with many recpients
+    - improved authentication failure logging
+
 1.4.2 (2019-10-24)
     - fixed adding authentication results to messages with failed ARC chains
 
