--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 2.0.0 (2021-??-??)
     - brand new UCL configuration system
     - added -U flag to specify arbitrary configuration on the command line
+    - changed the on-disk format of E files
     - removed support for DNS-based autoconfiguration
     - added support for statsd metric gathering
     - updated build system
@@ -18,6 +19,7 @@
       any remaining messages in that host queue.
     - corrected the error code returned for unsupported MAIL/RCPT extensions
     - separated delivery timeouts for the fast queue and other queues
+    - removed support for reading E files from simta 0.10.0 or older
 
 1.5.0 (2020-11-30)
     - fixed crash from bad bugfix
