Use CLOCK_REALTIME for SIMTA_CID
Ideally the PID/CID combination is unique not just across the lifetime
of the current machine, but globally. The monotonic clocks are allowed
to (and do) reset to zero, while CLOCK_REALTIME is the epoch.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 2.0.1 (2022-??-??)
     - reenabled TLS v1.0 and v1.1
+    - fixed unique PIDs
 
 2.0.0 (2022-03-11)
     - brand new UCL configuration system
