--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2.0.2 (2022-??-??)
+    - fixed double escaping of strings in generated JSON, which could cause
+      issues during expansion and delivery.
+
 2.0.1 (2022-03-15)
     - reenabled TLS v1.0 and v1.1
     - fixed unique PIDs
