Prevent crash on null value

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
       issues during expansion and delivery
     - fixed DMARC alignment checks
     - added standard config flags to simdmarc
+    - fixed crash during LDAP connection reset with no open LDAP connections
 
 2.0.1 (2022-03-15)
     - reenabled TLS v1.0 and v1.1
