--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
-2.x.x (2022-??-??)
+2.0.3 (2022-05-09)
+    - fixed releasing messages from jail via simc
+    - added more statsd metrics
     - fixed crash during LDAP retries when reconnect fails
     - added support for autoreply date ranges
 
