--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 2.0.4 (2022-??-??)
+    - fixed race when releasing messages from jail
     - fixed config validation failures on hostnames with `-`
 
 2.0.3 (2022-05-09)
