--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.0.4 (2022-??-??)
+    - fixed config validation failures on hostnames with `-`
+
 2.0.3 (2022-05-09)
     - fixed releasing messages from jail via simc
     - added more statsd metrics
