--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
     - fixed extensions advertised on the legacy TLS port
     - fixed race when releasing messages from jail
     - fixed config validation failures on hostnames with `-`
+    - fixed bitbucketing
 
 2.0.3 (2022-05-09)
     - fixed releasing messages from jail via simc
