Rework fast file accounting, remove jail hack
simta_fast_files has caused a lot of pain, with far too much
exception-based juggling to keep the count accurate.

To deliver jailed messages correctly in all situations without forcing
them into the slow queue, we need Deliver children of Receive parents
to run all of the queues (not just unexpanded), while the Receive
process itself needs to clear out all of the queues that were handed
off.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@
     - fixed race when releasing messages from jail
     - fixed config validation failures on hostnames with `-`
     - fixed bitbucketing
+    - removed forcible skipping of initial delivery attempts of messages
+      destined for jail
 
 2.0.3 (2022-05-09)
     - fixed releasing messages from jail via simc
