--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@
     - fixed bitbucketing
     - removed forcible skipping of initial delivery attempts of messages
       destined for jail
+    - enabled local delivery in default localhost config
 
 2.0.3 (2022-05-09)
     - fixed releasing messages from jail via simc
