--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2.2.0 (unreleased)
+    - added file-based ACLs
+    - re-added default user authorization setting
+
 2.1.0 (2022-07-19)
     - added support for separation of moderators and permitted senders
     - added permitted domains for groups
