--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 2.2.0 (unreleased)
+    - fixed spurious bounces from transient DNS errors
     - added file-based ACLs
     - re-added default user authorization setting
 
