--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
-2.2.0 (unreleased)
+2.2.0 (2022-12-12)
     - fixed spurious bounces from transient DNS errors
     - added file-based ACLs
     - re-added default user authorization setting
+    - improved compatibility with OpenSSL 3.x
 
 2.1.0 (2022-07-19)
     - added support for separation of moderators and permitted senders
