Remove extra allocation
This was moved higher in the function, but accidentally not removed here
so the partially initialized struct was thrown away. This resulted in
(null) in the logs where we wanted the pretty name, and a minor memory
leak.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.2.1 (????-??-??)
+    - fixed memory leak and logging problem in ACL code
+
 2.2.0 (2022-12-12)
     - fixed spurious bounces from transient DNS errors
     - added file-based ACLs
