Don't add invalid addresses to the expansion
I assumed that parse_addr_list() only returned valid addresses, but this
turns out not to be the case so we still need to check before adding
them to the envelope.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 2.2.1 (????-??-??)
     - fixed memory leak and logging problem in ACL code
+    - fixed regression that added invalid addresses during expansion
 
 2.2.0 (2022-12-12)
     - fixed spurious bounces from transient DNS errors
