--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.4.1 (2023-10-12)
+    - fixed DMARC processing of multiple DKIM signatures
+
 2.4.0 (2023-08-22)
     - added SPF tests, improved RFC 7208 compliance
     - fixed some memory allocation bugs
