Add `-h` flag to override detected hostname
This might fix the intermittent CI flakiness around the delivery
tests. The failures I saw on my test machine matched up to what I
recall seeing in the past.

--- a/simta.8
+++ b/simta.8
@@ -11,6 +11,7 @@
 .Op Fl cCdV
 .Op Fl D Ar base_directory
 .Op Fl f Ar config_file
+.Op fl h Ar hostname
 .Op Fl p Ar port
 .Op Fl u Ar username
 .Ek
@@ -74,6 +75,8 @@ options increase the verbosity.
 Specifies an alternate base directory.
 .It Fl f Ar config_file
 Specifies an alternate configuration file.
+.It Fl h Ar hostname
+Specifies the hostname.
 .It Fl p Ar port
 Specifies an alternate port to listen on.
 .It Fl u Ar user
